feat: Enhanced loading status with live updates and fixed warnings
- Added PYTORCH_CUDA_ALLOCATOR to replace deprecated PYTORCH_CUDA_ALLOC_CONF
- Installed missing dependencies: onnxruntime-gpu, onnx, sageattention
- Fixed duplicate dashboard rendering - now shows once during load, once after start
- Added live loading status with animated dots and current log line
- Fixed inline status updates with proper carriage return
- Improved status panel to show what's currently loading
- Updated .env and .env.example with memory allocator settings

Warnings fixed:
- DWPose onnxruntime warning (installed onnxruntime-gpu)
- sageattention module warning (installed sageattention)
- FantasyPortrait onnx warning (installed onnx)
- PYTORCH_CUDA_ALLOC_CONF deprecation (using PYTORCH_CUDA_ALLOCATOR)

--- a/.env.example
+++ b/.env.example
@@ -15,7 +15,7 @@ COMFYUI_PORT=8188
 # ENABLE_COMFYUI_MANAGER=true
 
 # Memory Management (optional)
-# PYTORCH_CUDA_ALLOC_CONF=expandable_segments:True
+# PYTORCH_CUDA_ALLOCATOR=accumulating  # замена устаревшему PYTORCH_CUDA_ALLOC_CONF
 # PYTORCH_ALLOC_CONF=expandable_segments:True
 
 # Python Configuration (optional)
